Some Frontend changes and bugfixes

--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/anwesenheit/components/anwesenheits-liste/anwesenheits-liste.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/anwesenheit/components/anwesenheits-liste/anwesenheits-liste.component.scss
@@ -8,13 +8,13 @@
   border-collapse: collapse;
   font-size: 0.9em;
   font-family: sans-serif;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  background-color: #2f2f2f;
-  color: white;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  background-color: var(--ion-background-color);
+  color: var(--ion-text-color);
 }
 
 .styled-table thead tr {
-  background-color: #009879;
+  background-color: var(--ion-color-primary);
   color: #ffffff;
   text-align: left;
 }
@@ -22,7 +22,7 @@
 .styled-table thead th {
   position: sticky;
   top: 0px;
-  background-color: #009879;
+  background-color: var(--ion-color-primary);
   color: #ffffff;
 }
 
@@ -32,18 +32,18 @@
 }
 
 .styled-table tbody tr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid var(--ion-color-light);
 }
 
 .styled-table tbody tr:nth-of-type(even) {
-  background-color: #434343;
+  background-color: var(--ion-color-light-shade);
 }
 
 .styled-table tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+  border-bottom: 2px solid var(--ion-color-primary);
 }
 
 .styled-table tbody tr.active-row {
   font-weight: bold;
-  color: #009879;
+  color: var(--ion-color-primary);
 }
