--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/forgot-password/forgot-password.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/forgot-password/forgot-password.component.html
@@ -9,7 +9,7 @@
     <div class="input-group">
       <ion-item>
         <app-show-hide-password>
-          <ion-input aria-label="Passwort" type="password" placeholder="Passwort"
+          <ion-input type="password" placeholder="Passwort"
             formControlName="password"></ion-input>
         </app-show-hide-password>
       </ion-item>
@@ -19,7 +19,7 @@
 
       <ion-item>
         <app-show-hide-password>
-          <ion-input aria-label="Passwort" type="password" placeholder="Bestätige Passwort"
+          <ion-input type="password" placeholder="Bestätige Passwort"
             formControlName="confirmPassword"></ion-input>
         </app-show-hide-password>
       </ion-item>
