--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/presentational/account-item/account-item.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/presentational/account-item/account-item.component.html
@@ -1,5 +1,5 @@
 <ion-item [button]="true" detail="false">
-  <ion-avatar aria-hidden="true" slot="start">
+  <ion-avatar slot="start">
     <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
   </ion-avatar>
   <ion-label>
