--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.html
@@ -8,14 +8,14 @@
   <form (ngSubmit)="login()" [formGroup]="credentials">
     <div class="input-group">
       <ion-item>
-        <ion-input aria-label="Email" type="email" placeholder="Email" formControlName="email"></ion-input>
+        <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
       </ion-item>
       <div *ngIf="(email?.dirty || email?.touched) && email?.errors" class="errors">
         <span *ngIf="email?.errors?.['required']">Email wird benötigt. </span>
       </div>
       <ion-item>
         <app-show-hide-password>
-          <ion-input aria-label="Passwort" type="password" placeholder="Passwort"
+          <ion-input type="password" placeholder="Passwort"
             formControlName="password"></ion-input>
         </app-show-hide-password>
       </ion-item>
