--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/registration/registration.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/registration/registration.component.html
@@ -9,7 +9,7 @@
     <div class="input-group">
       <ion-item>
         <app-show-hide-password>
-          <ion-input aria-label="Passwort" type="password" placeholder="Passwort"
+          <ion-input type="password" placeholder="Passwort"
             formControlName="password"></ion-input>
         </app-show-hide-password>
       </ion-item>
@@ -20,7 +20,7 @@
 
       <ion-item>
         <app-show-hide-password>
-          <ion-input aria-label="Passwort Bestätigung" type="password" placeholder="Wiederhole Passwort"
+          <ion-input type="password" placeholder="Wiederhole Passwort"
             formControlName="confirmPassword"></ion-input>
         </app-show-hide-password>
       </ion-item>
