--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.html
@@ -6,10 +6,10 @@
     <div class="user-name">Tv Jahn Bockum App</div>
     <!-- <div class="user-mail">Tv Jahn Bockum</div> -->
   </div>
- 
+
 
   <ion-item [button]="true" detail="false" class="user-info">
-    <ion-avatar aria-hidden="true" slot="start">
+    <ion-avatar slot="start">
       <img alt="" [src]="authService.userImage ? 'data:image/png;base64,' + authService.userImage : '/assets/avatar.svg'"/>
     </ion-avatar>
     <ion-label>
