--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-birthday-item/dashboard-birthday-item.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-birthday-item/dashboard-birthday-item.component.scss
@@ -1,3 +1,24 @@
+.birthday-item-wrapper {
+  border-radius: 8px;
+  margin-bottom: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+:host-context(.light-theme) .birthday-item-wrapper {
+  background-color: var(--ion-color-step-50);
+}
+
+:host-context(.dark-theme) .birthday-item-wrapper {
+  background-color: var(--ion-color-step-150);
+}
+
+ion-item{
+  --background: transparent;
+  --inner-border-width: 0;
+  --border-width: 0;
+}
+
 ion-avatar {
   width: 50px;
   height: 50px;
