--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
@@ -1,4 +1,5 @@
-<ion-item [button]="true" detail="false" (click)="emitOpenTermin()" class="default-color">
+<div class="termin-item-wrapper">
+<ion-item [button]="true" detail="false" (click)="emitOpenTermin()">
   <div class="triangle-base" [class.auftritt]="terminArt === terminArtEnum.Auftritt"
     [class.probe]="terminArt === terminArtEnum.Probe" [class.konzert]="terminArt === terminArtEnum.Konzert"
     [class.freizeit]="terminArt === terminArtEnum.Freizeit" [class.reise]="terminArt === terminArtEnum.Reise"></div>
@@ -6,7 +7,7 @@
     <h2>
       <strong> {{terminName}}</strong>
     </h2>
-    <ion-text class="default-color ion-text-wrap" style="font-size: 14px; color: white;">Datum: {{terminStartTime |
+    <ion-text class="default-color ion-text-wrap" style="font-size: 14px;">Datum: {{terminStartTime |
       date: 'dd.MM.YYYY'}}: {{terminStartTime | date :
       'HH:mm'}}-{{terminEndTime | date : 'HH:mm'}}</ion-text><br />
     <ion-note color="medium" class="ion-text-wrap">
@@ -17,3 +18,4 @@
     <ion-icon color="medium" name="chevron-forward"></ion-icon>
   </div>
 </ion-item>
+</div>
