--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/mitglieder/components/presentational/contact-item/contact-item.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/mitglieder/components/presentational/contact-item/contact-item.component.html
@@ -1,5 +1,5 @@
 <ion-item [button]="true" detail="false">
-  <ion-avatar aria-hidden="true" slot="start">
+  <ion-avatar slot="start">
     <img alt="" [src]="image ? 'data:image/png;base64,' + image : '/assets/avatar.svg'"/>
   </ion-avatar>
   <ion-label>
