--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/anwesenheit/components/anwesenheits-liste/anwesenheits-liste.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/anwesenheit/components/anwesenheits-liste/anwesenheits-liste.component.scss
@@ -15,7 +15,7 @@
 
 .styled-table thead tr {
   background-color: var(--ion-color-primary);
-  color: #ffffff;
+  --color: var(--ion-text-color);
   text-align: left;
 }
 
@@ -23,7 +23,7 @@
   position: sticky;
   top: 0px;
   background-color: var(--ion-color-primary);
-  color: #ffffff;
+  --color: var(--ion-text-color);
 }
 
 .styled-table th,
