--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/app.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
+  <ion-split-pane contentId="main-content" *ngIf="showSidenav">
 
     <ion-menu contentId="main-content">
       <ion-content>
@@ -10,4 +10,6 @@
     <ion-router-outlet id="main-content"></ion-router-outlet>
 
   </ion-split-pane>
+
+  <ion-router-outlet *ngIf="!showSidenav"></ion-router-outlet>
 </ion-app>
