--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/forgot-password/forgot-password.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/forgot-password/forgot-password.component.html
@@ -5,33 +5,35 @@
 </ion-header>
 
 <ion-content>
-  <form (ngSubmit)="resetPassword()" [formGroup]="credentials">
-    <div class="input-group">
-      <ion-item>
-        <app-show-hide-password>
-          <ion-input type="password" placeholder="Passwort"
-            formControlName="password"></ion-input>
-        </app-show-hide-password>
-      </ion-item>
-      <div *ngIf="(password?.dirty || password?.touched) && password?.errors" class="errors">
-        <span *ngIf="password?.errors?.['required']">Passwort wird benötigt.</span>
+  <div class="forgot-password-container">
+    <form (ngSubmit)="resetPassword()" [formGroup]="credentials">
+      <div class="input-group">
+        <ion-item>
+          <app-show-hide-password>
+            <ion-input type="password" placeholder="Passwort"
+              formControlName="password"></ion-input>
+          </app-show-hide-password>
+        </ion-item>
+        <div *ngIf="(password?.dirty || password?.touched) && password?.errors" class="errors">
+          <span *ngIf="password?.errors?.['required']">Passwort wird benötigt.</span>
+        </div>
+
+        <ion-item>
+          <app-show-hide-password>
+            <ion-input type="password" placeholder="Bestätige Passwort"
+              formControlName="confirmPassword"></ion-input>
+          </app-show-hide-password>
+        </ion-item>
+        <div *ngIf="(confirmPassword?.dirty || confirmPassword?.touched) && confirmPassword?.errors" class="errors">
+          <span *ngIf="confirmPassword?.errors?.['required']">Passwort Bestätigung wird benötigt.</span>
+        </div>
       </div>
 
-      <ion-item>
-        <app-show-hide-password>
-          <ion-input type="password" placeholder="Bestätige Passwort"
-            formControlName="confirmPassword"></ion-input>
-        </app-show-hide-password>
-      </ion-item>
-      <div *ngIf="(confirmPassword?.dirty || confirmPassword?.touched) && confirmPassword?.errors" class="errors">
-        <span *ngIf="confirmPassword?.errors?.['required']">Passwort Bestätigung wird benötigt.</span>
-      </div>
-    </div>
-
-    <ion-button type="submit" expand="block" [disabled]="!credentials.valid">Resete Passwort</ion-button>
-  </form>
-  <ion-button routerLink="/auth/" type="button" expand="block" fill="clear"
-    class="back-to-login-button">
-    Zurück zum Login
-  </ion-button>
+      <ion-button type="submit" expand="block" [disabled]="!credentials.valid">Resete Passwort</ion-button>
+    </form>
+    <ion-button routerLink="/auth/" type="button" expand="block" fill="clear"
+      class="back-to-login-button">
+      Zurück zum Login
+    </ion-button>
+  </div>
 </ion-content>
