--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/forgot-password/forgot-password.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/forgot-password/forgot-password.component.scss
@@ -3,6 +3,18 @@ ion-content {
   --padding-start: 10%;
   --padding-end: 10%;
   --background: url('https://images.unsplash.com/photo-1536431311719-398b6704d4cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80') 0 0/100% 100% no-repeat;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// Container for the form with responsive max-width
+.forgot-password-container {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .input-group {
@@ -11,7 +23,9 @@ ion-content {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 15px;
+  width: 100%;
 }
+
 .input-group ion-item {
   --background: transparent;
   --color: var(--ion-text-color);
@@ -19,7 +33,7 @@ ion-content {
 
 .errors {
   font-size: small;
-  --color: var(--ion-text-color);
+  color: #fff;
   background: var(--ion-color-danger);
   padding-left: 15px;
   padding-top: 5px;
@@ -33,8 +47,29 @@ ion-content {
 }
 
 .back-to-login-button{
-  position: absolute;
-  bottom: 32px;
-  left: 0;
-  right: 0;
+  position: relative;
+  margin-top: 16px;
+}
+
+// Responsive design for different screen sizes
+@media (max-width: 768px) {
+  ion-content {
+    --padding-top: 20%;
+  }
+  
+  .forgot-password-container {
+    padding: 16px;
+  }
+}
+
+@media (min-width: 769px) {
+  ion-content {
+    --padding-top: 10%;
+  }
+}
+
+// Button styling for consistent width
+ion-button {
+  width: 100%;
+  margin: 8px 0;
 }
