--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.scss
@@ -3,6 +3,18 @@ ion-content {
   --padding-start: 10%;
   --padding-end: 10%;
   --background: url('https://images.unsplash.com/photo-1536431311719-398b6704d4cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80') 0 0/100% 100% no-repeat;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// Container for the login form with responsive max-width
+.login-container {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .input-group {
@@ -11,6 +23,7 @@ ion-content {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 // Fix ion-item styling within input groups
@@ -32,4 +45,27 @@ ion-content {
   text-transform: none;
   color: #ffffffb8;
   margin-top: 16px;
+}
+
+// Responsive design for different screen sizes
+@media (max-width: 768px) {
+  ion-content {
+    --padding-top: 20%;
+  }
+  
+  .login-container {
+    padding: 16px;
+  }
+}
+
+@media (min-width: 769px) {
+  ion-content {
+    --padding-top: 10%;
+  }
+}
+
+// Button styling for consistent width
+ion-button {
+  width: 100%;
+  margin: 8px 0;
 }
