--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/core/components/container/side-menu/side-menu.component.html
@@ -23,7 +23,7 @@
     </ion-label>
   </ion-item>
 
-  <ion-menu-toggle>
+  <ion-menu-toggle autoHide="false">
     <ion-item (click)="logout()" detail="false">
       <ion-icon slot="start" name="log-out-outline"></ion-icon>
       <ion-label>
