--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-details/termin-details.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-details/termin-details.component.html
@@ -116,6 +116,20 @@
               <b>Uniform:</b>
               {{data['termin']['uniform'] | dropdownToString : data['uniformDropdownValues']}}
             </div>
+            <div class="border-top" *ngIf="data['termin']['dokumente'] && data['termin']['dokumente'].length > 0">
+              <b>Dokumente:</b>
+              <ion-list>
+                <ion-item *ngFor="let dokument of data['termin']['dokumente']" button (click)="downloadFile(dokument)">
+                  <ion-icon name="document-outline" slot="start"></ion-icon>
+                  <ion-label>{{this.fileUploadService.getOriginalFileName(dokument)}}</ion-label>
+                  <ion-icon name="download-outline" slot="end"></ion-icon>
+                </ion-item>
+              </ion-list>
+            </div>
+            <div *ngIf="isUploadingFiles" class="border-top">
+              <ion-spinner name="crescent"></ion-spinner>
+              <span style="margin-left: 8px;">Dateien werden hochgeladen...</span>
+            </div>
           </ion-card-content>
 
           <div class="button-div">
