--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.html
@@ -3,15 +3,16 @@
   <div class="triangle-base" [class.auftritt]="terminArt === terminArtEnum.Auftritt"
     [class.probe]="terminArt === terminArtEnum.Probe" [class.konzert]="terminArt === terminArtEnum.Konzert"
     [class.freizeit]="terminArt === terminArtEnum.Freizeit" [class.reise]="terminArt === terminArtEnum.Reise"></div>
+  <img class="image" [src]="image ? 'data:image/png;base64,' + image : '/assets/card-media.png'"/>
   <ion-label>
     <h2>
       <strong> {{terminName}}</strong>
     </h2>
-    <ion-text class="default-color ion-text-wrap" style="font-size: 14px;">Datum: {{terminStartTime |
+    <ion-text class="default-color ion-text-wrap" style="font-size: 14px;">{{terminStartTime |
       date: 'dd.MM.YYYY'}}: {{terminStartTime | date :
       'HH:mm'}}-{{terminEndTime | date : 'HH:mm'}}</ion-text><br />
     <ion-note color="medium" class="ion-text-wrap">
-      Mein Status: <span [class.red]="(terminResponse === 'Nicht Zurückgemeldet')">{{terminResponse}}</span>
+      <span [class.red]="(terminResponse === 'Nicht Zurückgemeldet')">{{terminResponse}}</span>
     </ion-note>
   </ion-label>
   <div class="metadata-end-wrapper" style="margin: 0;" slot="end">
