--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/presentational/dashboard-termin-item/dashboard-termin-item.component.scss
@@ -19,6 +19,13 @@ ion-item{
   --border-width: 0;
 }
 
+.image{
+  width: 54px;
+  height: 60%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
 .red{
   color: red;
 }
