--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.scss
@@ -1,6 +1,10 @@
 .ion-fab-button{
   margin-right: 20px;
   margin-bottom: 80px;
+  position: fixed;
+  bottom: -50px;
+  right: 15px;
+
 }
 
 ion-searchbar{
