--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <!-- <pre>{{data | json}}</pre> -->
   <ion-datetime presentation="date" [value]="currentDate | date : 'YYYY-MM-dd'" [highlightedDates]="highlightedDates" #date></ion-datetime>
-    
+
     <ion-list class="termin-list">
       <ion-item>
         <ion-label class="ion-label">
@@ -11,7 +11,7 @@
       <app-termin-item *ngFor="let termin of data.terminData | selectTerminsFromDate : date.value" [terminId]="termin.terminId"
         [terminStatus]="termin.terminStatus | dropdown : data.terminStatusDropdownValues" [terminName]="termin.name"
         [terminResponse]="termin.zugesagt | dropdown : data.responseDropdownValues"
-        [terminArt]="termin.terminArt" [terminStartTime]="termin.startZeit"
+        [terminArt]="termin.terminArt" [terminStartTime]="termin.startZeit" [image]="termin.image"
         [terminEndTime]="termin.endZeit" [istAnwesend]="termin.istAnwesend" [highAuth]="false"
         (openTermin)="openTermin(termin.terminId)">
       </app-termin-item>
