--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
@@ -10,9 +10,15 @@
   color: red;
 }
 
+.red{
+  color: red;
+}
+
 .image{
-  width: 60px;
-  height: 40px;
+  width: 68px;
+  height: 60%;
+  object-fit: cover;
+  margin-right: 10px;
 }
 
 .triangle-base{
