--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.scss
@@ -4,9 +4,13 @@
   position: fixed;
   bottom: -50px;
   right: 15px;
-
 }
 
-ion-searchbar{
-  position: sticky;
+ion-list{
+  height: 100%;
+}
+
+.termin-list {
+  height: calc(100% - 58px);
+  overflow-y: auto;
 }
