--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.scss
@@ -1,3 +1,8 @@
-ion-searchbar{
-  position: sticky;
+ion-list{
+  height: 100%;
+}
+
+.termin-list {
+  height: calc(100% - 58px);
+  overflow-y: auto;
 }
