--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/container/dashboard/dashboard.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/dashboard/components/container/dashboard/dashboard.component.scss
@@ -1,7 +1,11 @@
 .links{
   display: flex;
   justify-content: space-around;
-  
+}
+
+.card {
+  max-height: 300px;
+  overflow-y: auto;
 }
 
 .padding-lr{
