--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/current-termin-liste/current-termin-liste.component.html
@@ -1,10 +1,10 @@
-<div>
-  <ng-container *ngIf="dataFiltered$ | async as data">
-    <!-- <pre>{{data | json}}</pre> -->
-    <ion-list>
-      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Termin"
-        (ionInput)="search($event)"></ion-searchbar>
+<ng-container *ngIf="dataFiltered$ | async as data">
+  <!-- <pre>{{data | json}}</pre> -->
+  <ion-list>
+    <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Termin"
+      (ionInput)="search($event)"></ion-searchbar>
 
+    <div class="termin-list">
       <app-termin-item *ngFor="let termin of data.terminData" [terminId]="termin.terminId"
         [terminStatus]="termin.terminStatus | dropdown : data.terminStatusDropdownValues" [terminName]="termin.name"
         [terminResponse]="termin.zugesagt | dropdown : data.responseDropdownValues"
@@ -19,11 +19,11 @@
           Kein Termine
         </div>
       </ng-container>
-    </ion-list>
-    <ion-fab slot="fixed" vertical="bottom" horizontal="end" *ngIf="canCreateNewTermin">
-      <ion-fab-button class="ion-fab-button" (click)="openCreateTerminModal()">
-        <ion-icon name="add"></ion-icon>
-      </ion-fab-button>
-    </ion-fab>
-  </ng-container>
-</div>
+    </div>
+  </ion-list>
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end" *ngIf="canCreateNewTermin">
+    <ion-fab-button class="ion-fab-button" (click)="openCreateTerminModal()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+</ng-container>
