--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.html
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/history-termin-liste/history-termin-liste.component.html
@@ -1,11 +1,11 @@
-<div>
-  <ng-container *ngIf="dataFiltered$ | async as data">
-    <!-- <pre>{{data | json}}</pre> -->
+<ng-container *ngIf="dataFiltered$ | async as data">
+  <!-- <pre>{{data | json}}</pre> -->
 
-    <ion-list>
-      <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Termin"
-        (ionInput)="search($event)"></ion-searchbar>
+  <ion-list>
+    <ion-searchbar #searchBar show-clear-button="always" placeholder="Suche Termin"
+      (ionInput)="search($event)"></ion-searchbar>
 
+    <div class="termin-list">
       <app-termin-item *ngFor="let termin of data.terminData" [terminId]="termin.terminId"
         [terminStatus]="termin.terminStatus | dropdown : data.terminStatusDropdownValues" [terminName]="termin.name"
         [terminResponse]="termin.zugesagt | dropdown : data.responseDropdownValues"
@@ -20,6 +20,6 @@
           Kein Termine
         </div>
       </ng-container>
-    </ion-list>
-  </ng-container>
-</div>
+    </div>
+  </ion-list>
+</ng-container>
