--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.scss
@@ -1,5 +1,15 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .ion-label{
   font-size: 18px;
+}
+
+.termin-list{
+  width: 350px;
 }
 
 h3{
