--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/container/termin-overview/termin-overview.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 .ion-label{
@@ -10,6 +11,12 @@
 
 .termin-list{
   width: 350px;
+  height: calc(100% - 344px);
+}
+
+.termine{
+  height: calc(100% - 48px);
+  overflow-y: auto;
 }
 
 h3{
