--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/termin/components/presentational/termin-item/termin-item.component.scss
@@ -14,6 +14,15 @@
   color: red;
 }
 
+.green{
+  color: white;
+  //color: rgb(25, 255, 45);
+}
+
+.ion-text-wrap{
+  font-size: 14px;
+}
+
 .image{
   width: 68px;
   height: 60%;
