--- a/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.scss
+++ b/OrchesterApp.Api/OrchesterApp.Api/Frontend/src/app/authentication/components/container/login/login.component.scss
@@ -2,8 +2,9 @@ ion-content {
   --padding-top: 40%;
   --padding-start: 10%;
   --padding-end: 10%;
-  --background: url('https://images.unsplash.com/photo-1536431311719-398b6704d4cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80') 0 0/100% 100% no-repeat;
-  
+  --background: url('https://images.unsplash.com/photo-1536431311719-398b6704d4cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1234&q=80') center/contain no-repeat;
+  //--background: url('/assets/Blasorchester_Bockum_2022-scaled.jpeg') center/contain no-repeat;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -52,7 +53,7 @@ ion-content {
   ion-content {
     --padding-top: 20%;
   }
-  
+
   .login-container {
     padding: 16px;
   }
